Increased vertical spacing and fixed line height on error message

--- a/css/source/_variables.scss
+++ b/css/source/_variables.scss
@@ -11,5 +11,5 @@ $font-family-oswald: 'Oswald', sans-serif;
 
 $base-font-size: 15px;
 
-$spacing-vertical: .5em;
+$spacing-vertical: .75em;
 $spacing-horizontal: .5em;
